# ArqonHPO

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  Justfile  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  SECURITY.md  audit.toml  bindings.json  cli.json  clippy.toml  core.json  coverage_summary.md  hotpath.json  index.html  index.md.old  probe_upgrade_diff.txt  project.json  sitemap.xml
.agent/rules/: constitution.md
.arqon/: config.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: arqon-heal.yml  ci.yml  coverage.yml  publish.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
adrs/001-core-architecture/: index.html
adrs/002-python-bridge/: index.html
arqonship/: index.html
arqonship/architecture/: index.html
arqonship/cli-reference/: index.html
arqonship/configuration/: index.html
arqonship/developer-guide/: index.html
benchmarks/: ABLATION_BENCHMARK.md  BENCHMARK_REPORT.md  EXTENDED_BENCHMARK_REPORT.md  PCR_BENCHMARK_REPORT.md  PROBE_UPGRADE_BENCHMARK.md  RPZL_BENCHMARK_REPORT.md  ab_cp_shift.py  bench_seed.py  debug_classifier_impact.py  debug_periodic.py  demo_parallel_sharding.py  extended_benchmark_output.txt  index.html  report_sharding.py  run_ablation_benchmark.py  run_benchmarks.py  run_extended_benchmarks.py  run_pcr_benchmarks.py  run_phase8_suite.py  run_probe_benchmark.py  run_rpzl_benchmarks.py  run_time_benchmarks.py  run_ttt_benchmarks.py  test_probe_guardrails.py  viz_probe.py  viz_probe_upgrade.py
benchmarks/BENCHMARK_REPORT/: index.html
benchmarks/benchmarks/: EXTENDED_BENCHMARK_REPORT.md
benchmarks/methodology/: index.html
benchmarks/reporting/: aggregate.py  plot.py  schema.py
bindings/python/: Cargo.toml  pyproject.toml
community/: index.html
contributing/: index.html
cookbook/: index.html
cookbook/ml_tuning/: index.html
crates/cli/: Cargo.toml
crates/cli/assets/: dashboard.css  dashboard.html  dashboard.js
crates/cli/src/: dashboard.rs  main.rs
crates/cli/tests/: e2e_cli.rs  e2e_dashboard.rs
crates/core/: Cargo.toml
crates/core/benches/: adaptive_engine_latency.rs
crates/core/src/: artifact.rs  classify.rs  config.rs  lib.rs  machine.rs  probe.rs  rng.rs
crates/core/src/adaptive_engine/: audit.rs  config_atomic.rs  control_safety.rs  executor.rs  homeostasis.rs  mod.rs  proposer.rs  safety_executor.rs  spsa.rs  telemetry.rs
crates/core/src/governance/: client.rs  client_test.rs  mod.rs  rollout.rs
crates/core/src/omega/: mod.rs  observer.rs
crates/core/src/strategies/: mod.rs  multi_start_nm.rs  nelder_mead.rs  tpe.rs
crates/core/src/tests/: test_autopoiesis.rs  test_classify.rs  test_nelder_mead.rs  test_probe.rs  test_tpe.rs
crates/core/src/variant_catalog/: bandit.rs  catalog.rs  context.rs  mod.rs
crates/core/tests/: artifact_contract.rs
crates/ffi/: Cargo.toml
crates/hotpath/: Cargo.toml
crates/hotpath/src/: lib.rs  (+9 more)
crates/ship/: Cargo.toml
crates/ship/examples/: oracle_bench.rs
crates/ship/src/: config.rs  lib.rs  main.rs
crates/ship/src/heal/: audit.rs  context.rs  llm.rs  loop.rs  mod.rs  parser_rust.rs  prompts.rs
crates/ship/src/oracle/: edges.rs  embed.rs  graph.rs  hash.rs  mod.rs  parser.rs  parser_py.rs  query.rs  store.rs  vector_store.rs
crates/ship/src/ship/: checks.rs  commits.rs  git.rs  mod.rs  version.rs
crates/ship/tests/: e2e_ship.rs  graph_test.rs  heal_test.rs  oracle_test.rs  ship_test.rs  vector_test.rs
crates/ship/tests/snapshots/: graph_test__rust_extraction.snap
crates/sim/: Cargo.toml  plot_sim.py
crates/sim/src/: lib.rs  main.rs
demos/: index.html
demos/edge/: index.html
demos/inference/: index.html
demos/systems/: index.html
docs/: TECHNOTE_PROBE_UPGRADE.md  failed_experiments.md  index.md  mkdocs.yml
docs/context/: AdelicHilbert_part1.ipynb  AdelicHilbert_part2.ipynb  CPFD_RPZL_Integration.ipynb  PRISMA-QC_00.ipynb  PRISMA-QC_Foundation.md  Prime-BasedCircle-TwistDynamics.ipynb  Prime-TwistQuantumModel.ipynb  RPZL-mini.ipynb  RPZL_validation_00.ipynb  RecursivePrimeZooming_00.ipynb  RecursivePrimeZooming_01.ipynb  RelationalAdjointOperator.ipynb  SpectralKernelComputing_01.ipynb  SpectralKernelComputing_02.ipynb  SpectralKernelComputing_03.ipynb  SpectralKernelComputing_04.ipynb  SpectrumIStheOperatorsBlueprint.ipynb  TwistFieldFactorization_PureGeometric_00.ipynb  TwistFieldFactorization_PureGeometric_01.ipynb  constitution_v2.md  june18th.md  mikes_rpzl_README.txt  prime_twist_ml.ipynb  prime_twist_models.md  spectral_computation.md  spectral_computing_(3).py  spectral_computing_00.ipynb  twist_field_core.py
docs/docs/: arqon-ship.md  benchmarks.md  changelog.md  contributing.md  index.md  quickstart.md
docs/site/: 404.html  index.html  sitemap.xml
documentation/: index.html
documentation/cookbook/: index.html
documentation/faq/: index.html
documentation/installation/: index.html
documentation/integrations/: index.html
documentation/migration/: index.html
documentation/quickstart/: index.html
documentation/troubleshooting/: index.html
examples/actions/: actions.jsonl
examples/batch_cli/: README.md  evaluate.sh
examples/interactive/: README.md
examples/nas/: nas_benchmark_100.py  nas_mnist.py
examples/safety_presets/: guardrails_aggressive.json  guardrails_balanced.json  guardrails_conservative.json  rollback_policy.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_parser.rs
notebooks/: deleteme.ipynb
project/CODE_OF_CONDUCT/: index.html
project/CONTRIBUTING/: index.html
project/SECURITY/: index.html
project/about/: index.html
project/changelog/: index.html
project/ci_cd/: index.html
project/constitution/: index.html
project/roadmap/: index.html
project/test_coverage/: index.html
quickstart/: index.html
reference/python/: index.html
scripts/: coverage_report.py  fix_code.sh  install_hooks.sh
search/: search_index.json
specs/: constitution.md
stylesheets/: extra.css
why/: index.html
(+230 files in other folders)
