[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/ffi",
    "bindings/python", "crates/hotpath",
]
resolver = "2"



[workspace.dependencies]
# Dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
smallvec = { version = "1.13", features = ["const_generics"] }
crossbeam-queue = "0.3"
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive", "env"] }
pyo3 = { version = "0.24", features = ["extension-module"] }

# Internal crates
arqonhpo-core = { path = "crates/core" }
static_assertions = "1.1"
