[package]
name = "arqonhpo-cli"
version = "0.3.0"
edition = "2021"

[dependencies]
arqonhpo-core = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
prometheus = "0.14.0"
ratatui = "0.28.1"
crossterm = "0.28.1"
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = "0.12.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tempfile = "3.24.0"

# Pin ICU versions for rustc 1.82 compatibility
icu_collections = "=2.0.0"
icu_locale_core = "=2.0.0"
icu_normalizer = "=2.0.0"
icu_normalizer_data = "=2.0.0"
icu_properties = "=2.0.0"
icu_properties_data = "=2.0.0"
icu_provider = "=2.0.0"
# Pin unsafe deps for rustc 1.82
darling = "=0.20.10"
darling_core = "=0.20.10"
darling_macro = "=0.21.3"
instability = "=0.3.3"
writeable = "=0.6.0"
