[package]
name = "arqonhpo-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
smallvec = { workspace = true }
crossbeam-queue = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
static_assertions = { workspace = true }
