[package]
name = "arqonhpo-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
smallvec = { workspace = true }
crossbeam-queue = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
static_assertions = { workspace = true }
hotpath = { version = "0.1.0", path = "../hotpath" }

[dev-dependencies]
criterion = "=0.8.1"
serde_json.workspace = true

[[bench]]
name = "adaptive_engine_latency"
harness = false
