[package]
name = "ship"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
chrono = "0.4.42"
clap = { workspace = true, features = ["derive"] }
futures = "0.3"
hf-hub = { version = "0.4.3", features = ["ureq", "rustls-tls"] }
ignore = "0.4.25"
indicatif = "0.18.3"
lancedb = "0.23.1"
miette = { workspace = true, features = ["fancy"] }
ratatui = "0.28.1"
reqwest = { version = "0.12.26", features = ["blocking", "json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10.9"
thiserror.workspace = true
tokenizers = "0.22.2"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
toml_edit = "0.23.0"
tree-sitter = "0.26.3"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
assert_cmd = "2.1.1"
insta = "1.45.0"
predicates = "3.1.3"
reqwest = "0.12.26"
tempfile = "3.23.0"

# Pin ICU versions for rustc 1.82 compatibility
icu_collections = "=2.0.0"
icu_locale_core = "=2.0.0"
icu_normalizer = "=2.0.0"
icu_normalizer_data = "=2.0.0"
icu_properties = "=2.0.0"
icu_properties_data = "=2.0.0"
icu_provider = "=2.0.0"
# Pin unsafe deps for rustc 1.82
darling = "=0.20.10"
darling_core = "=0.20.10"
darling_macro = "=0.20.10"
instability = "=0.3.3"
writeable = "=0.6.0"
