[package]
name = "arqon-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
arqonhpo-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
thiserror = "1.0"
csv = "1.3"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
